examples/examples_inferred/bad/unknown_id_2.ez
f = lambda: x -> t * 2;

main = f 2;